# bug-tracker

./: .env  AGENTS.md  README.md  docker-compose.yaml
.github/: copilot-instructions.md  project-overview.md  skills-lock.json
.github/agents/: bug-tracker-architecture.agent.md
.github/instructions/: backend.instructions.md  frontend.instructions.md
backend/: .dockerignore  .env  .env.example  Dockerfile  check_endpoints.py  main.py  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/core/: state_machine.py
backend/app/models/: __init__.py  bug.py  comment.py  project.py  user.py
backend/app/routes/: __init__.py  auth.py  bugs.py  projects.py  users.py  utils.py
backend/app/schema/: __init__.py
backend/app/services/: __init__.py  auth.py  bug.py  comment.py  project.py  user.py
backend/instance/: endpoint_check.db
backend/migrations/versions/: 16652a9e92db_initial_schema.py  8b2ce6a6f2f5_add_auth_fields_to_users.py  f1b3d9a4c6e7_add_user_blocking_and_credentials.py
backend/tests/: conftest.py  test_api_validation.py  test_architecture_contracts.py  test_endpoints_smoke.py  test_models.py  test_routes_api_full.py  test_services_auth_user_project.py  test_services_bug_comment.py  test_state_machine.py  test_state_machine_extended.py  test_state_machine_matrix.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  architecture.contract.test.ts  index.css  main.tsx
frontend/src/api/: auth.ts  bugs.ts  client.contract.test.ts  (+4 more)
(+49 files in other folders)
